Make compatible with GitHub pages

--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -5,13 +5,10 @@
         <a href="/index.html"> home </a>
       </li>
       <li class = "pull-left navbar-list">
-        <a href="/blog.html"> blog </a>
+        <a href="/construction.html"> blog </a>
       </li>
       <li class = "pull-left navbar-list">
         <a href="/construction.html"> projects </a>
-      </li>
-      <li class = "pull-left navbar-list">
-        <a href="/about.html"> about </a>
       </li>
   </ul>
 </div>
