--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,7 +13,7 @@
             <div style = "flex: 1 0 auto; line-height: 1.5; padding: 10px;">
                 {{ content }}
             </div>
-            <div class="centered" style = "flex-shrink: 0; font-size: small; padding-top: 10px; padding-bottom: 30px;">
+            <div class="centered" style = "flex-shrink: 0; font-size: large; padding-top: 10px; padding-bottom: 30px;">
                 {% include footer.html %}
             </div>
         </div>
