Update paths to reflect GitHub pages directory restructuring (addition of Websites folder)

--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -2,13 +2,13 @@
   <a href="{{ site.baseurl }}/index.html" id = "site-title" class = "pull-left"><i class='fas fa-kiwi-bird'></i> Ezra Erives </a>
   <ul id = "navigation-list" class = "pull-right navbar-ul">
       <li class = "pull-left navbar-list">
-        <a href="/index.html"> home </a>
+        <a href="/website/index.html"> home </a>
       </li>
       <li class = "pull-left navbar-list">
-        <a href="/construction.html"> blog </a>
+        <a href="/website/construction.html"> blog </a>
       </li>
       <li class = "pull-left navbar-list">
-        <a href="/construction.html"> projects </a>
+        <a href="/website/construction.html"> projects </a>
       </li>
   </ul>
 </div>
