Prepend paths with site.url

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,6 @@
 <div id = "footer-icon" style = "display:flex; justify-content: center; gap: 20px;">
     <a href="https://github.com/eje24"><i class='fab fa-github'></i> </a>
-    <a href="/about.html"><i class='fas fa-info'></i> </a>
+    <a href="{{ site.baseurl }}/about.html"><i class='fas fa-info'></i> </a>
     <a href="mailto: ezraerives@gmail.com"><i class='fas fa-envelope'></i> </a>
 </div>
 </br>
