--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -5,7 +5,7 @@
         <a href="{{ site.baseurl }}/index.html"> home </a>
       </li>
       <li class = "pull-left navbar-list">
-        <a href="{{ site.baseurl }}/construction.html"> blog </a>
+        <a href="{{ site.baseurl }}/blog.html"> blog </a>
       </li>
       <li class = "pull-left navbar-list">
         <a href="{{ site.baseurl }}/construction.html"> projects </a>
