--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -8,7 +8,7 @@
         <a href="{{ site.baseurl }}/blog.html"> blog </a>
       </li>
       <li class = "pull-left navbar-list">
-        <a href="{{ site.baseurl }}/construction.html"> projects </a>
+        <a href="{{ site.baseurl }}/projects.html"> projects </a>
       </li>
   </ul>
 </div>
