--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,15 +1,16 @@
-<div class = "navbar container" style = 'flex-grow: 0;'>
-  <a href="{{ site.baseurl }}/index.html" id = "site-title" class = "pull-left"><i class='fas fa-kiwi-bird'></i> Ezra Erives </a>
-  <ul id = "navigation-list" class = "pull-right navbar-ul">
-      <li class = "pull-left navbar-list">
-        <a href="{{ site.baseurl }}/index.html"> home </a>
-      </li>
-      <li class = "pull-left navbar-list">
-        <a href="{{ site.baseurl }}/blog.html"> blog </a>
-      </li>
-      <li class = "pull-left navbar-list">
-        <a href="{{ site.baseurl }}/projects.html"> projects </a>
-      </li>
+<div class="navbar container" style='flex-grow: 0;'>
+  <a href="{{ site.baseurl }}/index.html" id="site-title" class="pull-left"><i class='fas fa-kiwi-bird'></i> Ezra Erives
+  </a>
+  <ul id="navigation-list" class="pull-right navbar-ul">
+    <li class="pull-left navbar-list">
+      <a href="{{ site.baseurl }}/index.html"> home </a>
+    </li>
+    <li class="pull-left navbar-list">
+      <a href="{{ site.baseurl }}/blog.html"> blog </a>
+    </li>
+    <li class="pull-left navbar-list">
+      <a href="{{ site.baseurl }}/projects.html"> projects </a>
+    </li>
   </ul>
 </div>
 <hr>
