--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,7 +6,8 @@
     <!--Font Stuff-->
     <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@300&display=swap" rel="stylesheet">
     <link href='https://fonts.googleapis.com/css?family=Inconsolata:400,700' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/styles.css">
+    <!-- <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/styles.css"> -->
+    <link rel="stylesheet" type="text/css" href="{{site.baseurl}}/assets/css/main.css">
     <!--KaTeX-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.12.0/dist/katex.min.css"
         integrity="sha384-AfEj0r4/OFrOo5t7NnNe46zW/tFgW6x/bCJG8FqQCEo3+Aro6EYUG4+cU+KJWu/X" crossorigin="anonymous">
