--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -6,10 +6,10 @@
       <a href="{{ site.baseurl }}/index.html"> home </a>
     </li>
     <li class="pull-left navbar-list">
-      <a href="{{ site.baseurl }}/blog.html"> blog </a>
+      <a href="{{ site.baseurl }}/research.html"> research </a>
     </li>
     <li class="pull-left navbar-list">
-      <a href="{{ site.baseurl }}/projects.html"> projects </a>
+      <a href="{{ site.baseurl }}/blog.html"> blog </a>
     </li>
   </ul>
 </div>
