--- a/_includes/header.html
+++ b/_includes/header.html
@@ -27,6 +27,28 @@
         }
     </style>
     <script>
+      document.addEventListener('DOMContentLoaded', (event) => {
+        const modeIcon = document.getElementById('mode-icon');
+
+        // Load the saved mode from local storage
+        if (localStorage.getItem('mode') === 'dark') {
+          document.body.classList.add('dark-mode');
+          modeIcon.classList.replace('fa-moon', 'fa-sun');
+        }
+
+        modeIcon.addEventListener('click', () => {
+          document.body.classList.toggle('dark-mode');
+          if (document.body.classList.contains('dark-mode')) {
+            modeIcon.classList.replace('fa-moon', 'fa-sun');
+            localStorage.setItem('mode', 'dark');
+          } else {
+            modeIcon.classList.replace('fa-sun', 'fa-moon');
+            localStorage.setItem('mode', 'light');
+          }
+        });
+      });
+    </script>
+    <script>
         document.addEventListener("DOMContentLoaded", function () {
             renderMathInElement(document.body, {
                 macros: {
@@ -44,17 +66,4 @@
             });
         });
     </script>    
-    <style>
-        .theorem-box {
-            border: 1px solid #000;
-            padding: 10px;
-            margin: 10px 0;
-            background-color: #f9f9f9;
-            border-radius: 5px;
-        }
-        .theorem-title {
-            font-weight: bold;
-            margin-bottom: 5px;
-        }
-    </style>
 </head>
