--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -2,6 +2,9 @@
   <a href="{{ site.baseurl }}/index.html" id="site-title" class="pull-left"><i class='fas fa-kiwi-bird'></i> Ezra Erives
   </a>
   <ul id="navigation-list" class="pull-right navbar-ul">
+   <li class="pull-left navbar-list">
+        <i id="mode-icon" class="fa fa-moon"></i>
+    </li>
     <li class="pull-left navbar-list">
       <a href="{{ site.baseurl }}/index.html"> home </a>
     </li>
