--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -25,6 +25,31 @@ body {
   text-shadow: 0 0 1px rgba(58, 57, 57, 0.25);
 }
 
+/* Dark mode */
+body.dark-mode {
+  @extend body;
+  background-color: black;
+  color: white;
+}
+
+.theorem-box {
+    border: 1px solid #000;
+    padding: 10px;
+    margin: 10px 0;
+    background-color: #f9f9f9;
+    border-radius: 5px;
+}
+.theorem-title {
+    font-weight: bold;
+    margin-bottom: 5px;
+}
+
+body.dark-mode .theorem-box {
+  border: 1px solid #fff; /* Update the border color to match dark mode */
+  background-color: #333; /* Dark background color */
+  color: #fff; /* Text color to ensure readability */
+}
+
 a {
   text-decoration: none;
   color: $accent;
@@ -122,6 +147,14 @@ h4 {
   font-size: large;
 }
 
+#navigation-list {
+  display: flex;
+  align-items: center; /* Vertically center the items */
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+}
+
 
 
 // footer
@@ -184,3 +217,4 @@ h4 {
 .preprint-authors {
   margin-bottom: 5px; /* Add space between the authors and the links */
 }
+
